--- a/almurad-system/orders.html
+++ b/almurad-system/orders.html
@@ -6,6 +6,63 @@
   <title>الطلبات - نظام المراد</title>
   <style>
 
+/* ============================
+   🎯 نظام حركة الجدول النهائي
+   ============================ */
+
+/* الحاوية الرئيسية للجدول */
+.table-container {
+  width: 100%;
+  height: 80vh;
+
+  overflow-x: auto;   /* يتحرك يسار/يمين */
+  overflow-y: auto;   /* يتحرك فوق/تحت */
+
+  -webkit-overflow-scrolling: touch; /* سلاسة آيفون */
+  
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+
+  position: relative;
+
+  /* 👇 السماح بالسحب بكل الاتجاهات */
+  touch-action: pan-x pan-y;
+}
+
+/* الجدول نفسه */
+.table-container table {
+  min-width: 1400px;
+  width: max-content;
+  margin: 0;
+  transform-origin: top right;
+  transition: transform 0.15s ease-out;
+}
+
+/* 📌 تثبيت رأس الجدول */
+thead th {
+  position: sticky;
+  top: 0;
+  z-index: 50;
+  background: #043B64;
+  color: white;
+}
+
+/* 📌 تثبيت عمود الاختيار */
+td:first-child, th:first-child {
+  position: sticky;
+  right: 0;
+  background: white;
+  z-index: 40;
+}
+
+/* 📌 تثبيت عمود التسلسل (#) */
+td:nth-child(2), th:nth-child(2) {
+  position: sticky;
+  right: 60px;
+  background: white;
+  z-index: 39;
+}
 
 
 /* يمنع الجدول من الهروب لليسار */
